--- a/index.html
+++ b/index.html
@@ -14,9 +14,84 @@
         <header class="header">
             <a href="#" class="logo"></a>
         </header>
-        <main class="content"></main>
-        <footer class="footer"></footer>
-    </div>
+        <main class="content">
+            <article class="profile">
+                <div class="profile__wrapper">
+                    <img src="images/Avatar.svg" alt="Изображение пользователя" class="avatar">
+                    <div class="profile__info">
+                        <div class="profile__text">
+                            <h1 class="profile__name">Жак-Ив Кусто</h1>
+                            <button class="profile__edit-button">
+                                <img src="images/edit.svg" alt="Изменить профиль">
+                            </button>
+                        </div>
+                        <p class="profile__nickname">Исследователь океана</p>
+                    </div>
+                </div>
+                <button class="profile__add-button">
+                    <div class="profile__target"></div>
+                </button>
+            </article>
+            <section class="cards">
+                <div class="card">
+                    <img src="images/karachaevsk.jpg" alt="Карачаевск" class="card__mask" />
+                    <div class="card__description">
+                        <h2 class="card__title">Карачаевск</h2>
+                        <div class="card__like card__like_active"></div>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/elbrus.jpg" alt="Эльбрус" class="card__mask" />
+                    <div class="card__description">
+                        <h2 class="card__title">Гора Эльбрус</h2>
+                        <div class="card__like card__like_active"></div>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/dombay.jpg" alt="Домбай" class="card__mask" />
+                    <div class="card__description">
+                        <h2 class="card__title">Домбай</h2>
+                        <div class="card__like card__like_active"></div>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/elbrus.jpg" alt="Эльбрус" class="card__mask" />
+                    <div class="card__description">
+                        <h2 class="card__title">Гора Эльбрус</h2>
+                        <div class="card__like card__like_active"></div>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/dombay.jpg" alt="Домбай" class="card__mask" />
+                    <div class="card__description">
+                        <h2 class="card__title">Домбай</h2>
+                        <div class="card__like card__like_active"></div>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/karachaevsk.jpg" alt="Карачаевск" class="card__mask" />
+                    <div class="card__description">
+                        <h2 class="card__title">Карачаево-Черкесия</h2>
+                        <div class="card__like card__like_active"></div>
+                    </div>
+                </div>
+            </section>
+        </main>
+        <footer class="footer">
+            <p class="footer__copyrights">&copy; 2022 Mesto Russia</p>
+        </footer>
+        <!-- <div class="overlay overlay__hidden">
+            <div class="edit-form">
+                <div class="edit-form__close"></div>
+                <form action="get" class="edit-form__wrapper">
+                    <h2 class="edit-form__title">Редактировать профиль</h2>
+                    <input type="text" class="edit-form__name" placeholder="Жак-Ив Кусто">
+                    <input type="text" class="edit-form__nickname" placeholder="Исследователь океана">
+                    <input type="submit" class="edit-form__submit" placeholder="Сохранить">
+                </form>
+            </div>
+        </div>
+    </div> -->
 </body>
 
 </html>
