type: corrections popup

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <footer class="footer">
             <p class="footer__copyrights">&copy; 2022 Mesto Russia</p>
         </footer>
-        <!-- <div class="overlay overlay__hidden">
+        <div class="overlay overlay__hidden">
             <div class="edit-form">
                 <div class="edit-form__close"></div>
                 <form action="get" class="edit-form__wrapper">
@@ -90,7 +90,7 @@
                     <input type="submit" class="edit-form__submit" placeholder="Сохранить">
                 </form>
             </div>
-        </div> -->
+        </div>
     </div>
 </body>
 
