fix/form-classes

--- a/index.html
+++ b/index.html
@@ -77,17 +77,17 @@
             <p class="footer__copyrights">&copy; 2022 Mesto Russia</p>
         </footer>
         <div class="overlay_hidden">
-            <div class="edit-form">
-                <button class="edit-form__close" type="button" aria-label="close"></button>
-                <form action="get" class="edit-form__wrapper" name="edit-form">
-                    <h2 class="edit-form__title">Редактировать профиль</h2>
-                    <input type="text" class="edit-form__element" name="edit__name" placeholder="Имя"
-                        id="edit-form__name">
-                    <input type="text" class="edit-form__element" name="edit__nickname" id="edit-form__nickname"
+            <div class="form-wrapper">
+                <button class="form__close" type="button" aria-label="close"></button>
+                <form action="get" class="form" name="edit-form">
+                    <h2 class="form__title">Редактировать профиль</h2>
+                    <input type="text" class="form__element" name="edit__name" placeholder="Имя" id="edit-form__name">
+                    <input type="text" class="form__element" name="edit__nickname" id="edit-form__nickname"
                         placeholder="О себе">
-                    <button class="edit-form__submit" type="submit">Сохранить</button>
+                    <button class="form__submit" type="submit">Сохранить</button>
                 </form>
             </div>
+
         </div>
     </div>
     <script src="app/app.js"></script>
