--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
         <footer class="footer">
             <p class="footer__copyrights">&copy; 2022 Mesto Russia</p>
         </footer>
-        <div class="overlay_hidden">
+        <div class="overlay_hidden" id="profile-overlay">
             <div class="form-wrapper">
-                <button class="form__close" type="button" aria-label="close"></button>
-                <form action="get" class="form" name="edit-form">
+                <button class="form__close" type="button" aria-label="close" id="edit-form__close"></button>
+                <form action="get" class="form" name="edit-form" id="edit-form">
                     <h2 class="form__title">Редактировать профиль</h2>
                     <input type="text" class="form__element" name="edit__name" placeholder="Имя" id="edit-form__name">
                     <input type="text" class="form__element" name="edit__nickname" id="edit-form__nickname"
@@ -87,7 +87,19 @@
                     <button class="form__submit" type="submit">Сохранить</button>
                 </form>
             </div>
-
+        </div>
+        <div class="overlay_hidden" id="add-overlay">
+            <div class="form-wrapper">
+                <button class="form__close" type="button" aria-label="close"></button>
+                <form action="get" class="form" name="add-form" id="add-form">
+                    <h2 class="form__title">Новое место</h2>
+                    <input type="text" class="form__element" name="add__image-name" placeholder="Название"
+                        id="add__image-name">
+                    <input type="url" class="form__element" name="add__image-url" id="add__image-url"
+                        placeholder="Ссылка на картинку">
+                    <button class="form__submit" type="submit">Создать</button>
+                </form>
+            </div>
         </div>
     </div>
     <script src="app/app.js"></script>
