feature/delete card from list

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </form>
             </div>
         </div>
-        <div class="overlay" id="image-overlay">
+        <div class="overlay_hidden" id="image-overlay">
             <div class="popup-wrapper popup-wrapper_image">
                 <button class="popup-wrapper__close" type="button" aria-label="close"></button>
                 <div class="popup">
