--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </div>
     </template>
 
-    <script src="app/app.js"></script>
+    <script src="app/index.js"></script>
 </body>
 
 </html>
