fix/delete src attribute

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="popup-wrapper popup-wrapper_image">
                 <button class="popup-wrapper__close" type="button" aria-label="close"></button>
                 <div class="popup">
-                    <img src="" alt="" class="popup__image">
+                    <img alt="" class="popup__image">
                     <h3 class="popup__title"></h3>
                 </div>
             </div>
