--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
         <div class="overlay_hidden" id="profile-overlay">
             <div class="popup-wrapper">
                 <button class="popup-wrapper__close" type="button" aria-label="close" id="edit-form__close"></button>
-                <form action="get" class="form" name="edit-form" id="edit-form">
+                <form action="get" class="form" name="editForm" id="edit-form">
                     <h2 class="form__title">Редактировать профиль</h2>
                     <input type="text" class="form__element" name="edit__name" placeholder="Имя" id="edit-form__name">
                     <input type="text" class="form__element" name="edit__nickname" id="edit-form__nickname"
                         placeholder="О себе">
-                    <button class="form__submit" type="submit">Сохранить</button>
+                    <button class="form__submit form__submit_disabled" type="submit" disabled>Сохранить</button>
                 </form>
             </div>
         </div>
         <div class="overlay_hidden" id="add-overlay">
             <div class="popup-wrapper">
                 <button class="popup-wrapper__close" type="button" aria-label="close"></button>
-                <form action="get" class="form" name="add-form" id="add-form">
+                <form action="get" class="form" name="addForm" id="add-form">
                     <h2 class="form__title">Новое место</h2>
                     <input type="text" class="form__element" name="add__image-name" placeholder="Название"
                         id="add__image-name">
