--- a/index.html
+++ b/index.html
@@ -38,12 +38,14 @@
         <div class="overlay_hidden" id="profile-overlay">
             <div class="popup-wrapper">
                 <button class="popup-wrapper__close" type="button" aria-label="close" id="edit-form__close"></button>
-                <form action="get" class="form" name="editForm" id="edit-form">
+                <form action="get" class="form" name="editForm" id="edit-form" novalidate>
                     <h2 class="form__title">Редактировать профиль</h2>
                     <input type="text" class="form__element" name="edit__name" placeholder="Имя" id="edit-form__name"
-                        minlength="2" maxlength="40">
+                        minlength="2" maxlength="40" required>
+                    <span class="form__element-error"></span>
                     <input type="text" class="form__element" name="edit__nickname" id="edit-form__nickname"
-                        placeholder="О себе" minlength="2" maxlength="200">
+                        placeholder="О себе" minlength="2" maxlength="200" required>
+                    <span class="form__element-error"></span>
                     <button class="form__submit form__submit_disabled" type="submit" disabled>Сохранить</button>
                 </form>
             </div>
@@ -51,12 +53,12 @@
         <div class="overlay_hidden" id="add-overlay">
             <div class="popup-wrapper">
                 <button class="popup-wrapper__close" type="button" aria-label="close"></button>
-                <form action="get" class="form" name="addForm" id="add-form">
+                <form action="get" class="form" name="addForm" id="add-form" novalidate>
                     <h2 class="form__title">Новое место</h2>
                     <input type="text" class="form__element" name="add__image-name" placeholder="Название"
-                        id="add__image-name">
+                        id="add__image-name" minlength="2" maxlength="30" required>
                     <input type="url" class="form__element" name="add__image-url" id="add__image-url"
-                        placeholder="Ссылка на картинку">
+                        placeholder="Ссылка на картинку" required>
                     <button class="form__submit" type="submit">Создать</button>
                 </form>
             </div>
