--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,8 @@
         <main class="content">
             <article class="profile">
                 <div class="profile__wrapper">
-                    <img src="images/Avatar.svg" alt="Изображение пользователя" class="profile__avatar">
+                    <img src="<%=require('./images/Avatar.svg')%>" alt="Изображение пользователя"
+                        class="profile__avatar">
                     <div class="profile__info">
                         <div class="profile__text">
                             <h1 class="profile__name">Жак-Ив Кусто</h1>
