--- a/src/index.html
+++ b/src/index.html
@@ -90,7 +90,10 @@
             <button class="card__trash" type="button"></button>
             <div class="card__description">
                 <h2 class="card__title"></h2>
-                <button class="card__like" type="button"></button>
+                <div class="card__counter">
+                    <button class="card__like" type="button"></button>
+                    <p class="card__count">0</p>
+                </div>
             </div>
         </div>
     </template>
