--- a/src/index.html
+++ b/src/index.html
@@ -20,10 +20,10 @@
                         class="profile__avatar">
                     <div class="profile__info">
                         <div class="profile__text">
-                            <h1 class="profile__name">Жак-Ив Кусто</h1>
+                            <h1 class="profile__name"></h1>
                             <button class="profile__edit-button" type="button" aria-label="edit-popup"></button>
                         </div>
-                        <p class="profile__nickname">Исследователь океана</p>
+                        <p class="profile__nickname"></p>
                     </div>
                 </div>
                 <button class="profile__add-button" type="button" aria-label="add-popup"></button>
@@ -92,7 +92,7 @@
                 <h2 class="card__title"></h2>
                 <div class="card__counter">
                     <button class="card__like" type="button"></button>
-                    <p class="card__count">0</p>
+                    <p class="card__like-count"></p>
                 </div>
             </div>
         </div>
