--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,7 @@
         <main class="content">
             <article class="profile">
                 <div class="profile__wrapper">
-                    <img src="<%=require('./images/Avatar.svg')%>" alt="Изображение пользователя"
-                        class="profile__avatar">
+                    <img src="" alt="Изображение пользователя" class="profile__avatar">
                     <div class="profile__info">
                         <div class="profile__text">
                             <h1 class="profile__name"></h1>
@@ -70,6 +69,29 @@
                         <span class="add__image-url-error"></span>
                     </label>
                     <button class="form__submit" type="submit">Создать</button>
+                </form>
+            </div>
+        </div>
+        <div class="overlay_hidden" id="image-overlay">
+            <div class="popup-wrapper popup-wrapper_image">
+                <button class="popup-wrapper__close" type="button" aria-label="close"></button>
+                <div class="popup">
+                    <img alt="" class="popup__image">
+                    <h3 class="popup__title"></h3>
+                </div>
+            </div>
+        </div>
+        <div class="overlay_hidden" id="avatar-overlay">
+            <div class="popup-wrapper">
+                <button class="popup-wrapper__close" type="button" aria-label="close"></button>
+                <form action="get" class="form" name="avatarForm" id="avatar-form" novalidate>
+                    <h2 class="form__title">Обновить аватар</h2>
+                    <label class="form__field">
+                        <input type="url" class="form__element" name="edit__image-avatar" placeholder="Название"
+                            id="edit__image-avatar" minlength="2" required>
+                        <span class="edit__image-avatar-error"></span>
+                    </label>
+                    <button class="form__submit" type="submit">Сохранить</button>
                 </form>
             </div>
         </div>
