feature/avatar overlay

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,11 @@
         <main class="content">
             <article class="profile">
                 <div class="profile__wrapper">
-                    <img src="" alt="Изображение пользователя" class="profile__avatar">
+                    <div class="profile__avatar-container">
+                        <img src="<%=require('./images/editAvatar.svg')%>" alt="изменить аватар"
+                            class="profile__avatar-overlay">
+                        <img src="" alt="Изображение пользователя" class="profile__avatar">
+                    </div>
                     <div class="profile__info">
                         <div class="profile__text">
                             <h1 class="profile__name"></h1>
