--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
         <footer class="footer">
             <p class="footer__copyrights">&copy; 2022 Mesto Russia</p>
         </footer>
-        <div class="overlay_hidden" id="profile-overlay">
+        <div class="popup popup_hidden" id="profile-overlay">
             <div class="popup-wrapper">
                 <button class="popup-wrapper__close" type="button" aria-label="close" id="edit-form__close"></button>
                 <form action="get" class="form" name="editForm" id="edit-form" novalidate>
@@ -57,7 +57,7 @@
                 </form>
             </div>
         </div>
-        <div class="overlay_hidden" id="add-overlay">
+        <div class="popup popup_hidden" id="add-overlay">
             <div class="popup-wrapper">
                 <button class="popup-wrapper__close" type="button" aria-label="close"></button>
                 <form action="get" class="form" name="addForm" id="add-form" novalidate>
@@ -76,7 +76,7 @@
                 </form>
             </div>
         </div>
-        <div class="overlay_hidden" id="image-overlay">
+        <div class="popup popup_hidden" id="image-overlay">
             <div class="popup-wrapper popup-wrapper_image">
                 <button class="popup-wrapper__close" type="button" aria-label="close"></button>
                 <div class="popup">
@@ -85,7 +85,7 @@
                 </div>
             </div>
         </div>
-        <div class="overlay_hidden" id="avatar-overlay">
+        <div class="popup popup_hidden" id="avatar-overlay">
             <div class="popup-wrapper">
                 <button class="popup-wrapper__close" type="button" aria-label="close"></button>
                 <form action="get" class="form" name="avatarForm" id="avatar-form" novalidate>
@@ -99,12 +99,12 @@
                 </form>
             </div>
         </div>
-        <div class="overlay_hidden" id="image-overlay">
+        <div class="popup popup_hidden" id="image-popup">
             <div class="popup-wrapper popup-wrapper_image">
                 <button class="popup-wrapper__close" type="button" aria-label="close"></button>
-                <div class="popup">
-                    <img alt="" class="popup__image">
-                    <h3 class="popup__title"></h3>
+                <div class="image-modal">
+                    <img alt="" class="image-modal__item">
+                    <h3 class="image-modal__title"></h3>
                 </div>
             </div>
         </div>
