fix/remove unnecessary class from html + close popups + general constant

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
         <footer class="footer">
             <p class="footer__copyrights">&copy; 2022 Mesto Russia</p>
         </footer>
-        <div class="popup popup_hidden" id="profile-overlay">
+        <div class="popup" id="profile-overlay">
             <div class="popup-wrapper">
                 <button class="popup-wrapper__close" type="button" aria-label="close" id="edit-form__close"></button>
                 <form action="get" class="form" name="editForm" id="edit-form" novalidate>
@@ -57,7 +57,7 @@
                 </form>
             </div>
         </div>
-        <div class="popup popup_hidden" id="add-overlay">
+        <div class="popup" id="add-overlay">
             <div class="popup-wrapper">
                 <button class="popup-wrapper__close" type="button" aria-label="close"></button>
                 <form action="get" class="form" name="addForm" id="add-form" novalidate>
@@ -76,16 +76,7 @@
                 </form>
             </div>
         </div>
-        <div class="popup popup_hidden" id="image-overlay">
-            <div class="popup-wrapper popup-wrapper_image">
-                <button class="popup-wrapper__close" type="button" aria-label="close"></button>
-                <div class="popup">
-                    <img alt="" class="popup__image">
-                    <h3 class="popup__title"></h3>
-                </div>
-            </div>
-        </div>
-        <div class="popup popup_hidden" id="avatar-overlay">
+        <div class="popup" id="avatar-overlay">
             <div class="popup-wrapper">
                 <button class="popup-wrapper__close" type="button" aria-label="close"></button>
                 <form action="get" class="form" name="avatarForm" id="avatar-form" novalidate>
@@ -99,7 +90,7 @@
                 </form>
             </div>
         </div>
-        <div class="popup popup_hidden" id="image-popup">
+        <div class="popup" id="image-overlay">
             <div class="popup-wrapper popup-wrapper_image">
                 <button class="popup-wrapper__close" type="button" aria-label="close"></button>
                 <div class="image-modal">
